--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescipt": "^1.0.0"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.2.0",
     "fastify": "^4.23.0"
   }
